objects/Q2C_SmartSheet_Log__c.object
<CustomObject>
    <fields>
        <fullName>SS_Created_Date__c</fullName>
        <label>SS Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SS_Link_to_SFDC__c</fullName>
        <label>SS Link to SFDC</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SS_Ref_Number__c</fullName>
        <label>SS Ref Number</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SS_Row_ID__c</fullName>
        <label>SS Row ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Q2C SmartSheet Log</label>
    <nameField>
        <displayFormat>QL-{000000}</displayFormat>
        <label>Q2C SmartSheet Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Q2C SmartSheet Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>